# SearchEngine

./: CMakeLists.txt  README.md  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchServer_test.cpp
